# My-resume-projects

./: Enemy.h  Harjoitustyö.vcxproj.filters  Object.h  Player.h  Position.cpp  README.md
EngineV2/: README.md
EngineV2/include/engine/: scene.h  sfml_renderer.h
EngineV2/src/: main_matikkapeli_v2.cpp  main_mygame_v1.cpp  main_test_engine_v3.cpp
My-first-game/: Enemy.cpp  Enemy.h  Harjoitustyö.vcxproj  Healthpack.cpp  Healthpack.h  Heathpack.cpp  Heathpack.h  Object.cpp  Object.h  Player.cpp  Player.h  Position.cpp  Position.h  main  main.cpp
My-first-game/main.dSYM/Contents/Resources/DWARF/: main
My-first-game/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
OldEngine/: CMakeLists.txt  README.md
OldEngine/include/engine/: application.h  game_object.h
OldEngine/src/: main_game_object_test.cpp  main_matikkapeli_v1.cpp  main_sfml_window.cpp  main_test_engine_v1.cpp  main_test_engine_v2.cpp
OldEngine/src/engine/: sfml_renderer.cpp
